import changes from `dev' branch of rmottola/Arctic-Fox: - Bug 824947 - Put the add-on installation progress notification's custom content in <popupnotificationcontent> rather than overriding the anonymous content. r=dtownsend (0e392de06) - Bug 892110 - fix pointerlock label to wrap, r=ttaubert (59e98404d) - Bug 1128126 - Enforce safe schemes in isInstallAllowed. r=Mossop (245660555) - Bug 1139656 followup, addressing flod's review comments (4d0828268) - Bug 1148026 - Add a skeleton of the login fill doorhanger. r=MattN (2ae919f7e) - Bug 1054712 - Remove duplicate logic from tabbrowser and search bar by using the getImageURLForResolution helper function in PlacesUtils. r=MattN (835937954) - Bug 959576 - Create a component to get the list of priority domains. r=gavin (ddb63036b) - bug 959573 - Land UnifiedAutocomplete (disabled by default). rs=ttaubert (1fd1dd6d5) - fix patch order (d1c7cee8f) - Bug 976621 - [e10s] Don't allow tabs to be dragged between e10s and non-e10s windows (r=felipe) (a51229627) - Bug 1146193 - Part 1: Fix tab drag and drop. r=gavin (4d08de3fb) - Bug 1075450 - Rename tests (part 2/2) r=mak (21c3a3448) - Bug 1146193 - Part 2: Add test for tab reorder and duplicate. r=gavin (8cda17f0c)

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -1217,10 +1217,6 @@ toolbar[iconsize="small"] #feed-button {
   max-width: 27em;
 }
 
-.popup-progress-meter {
-  margin-top: .5em;
-}
-
 .addon-install-confirmation-name {
   font-weight: bold;
 }
@@ -1985,6 +1981,7 @@ toolbar[mode="text"] toolbarbutton.chevron > .toolbarbutton-icon {
 %endif
 %include ../shared/plugin-doorhanger.inc.css
 %include ../shared/badcontent-doorhanger.inc.css
+%include ../shared/login-doorhanger.inc.css
 
 %ifdef MOZ_DEVTOOLS
 .gcli-panel {
