--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -1809,15 +1809,11 @@ toolbar[brighttext] .tabs-closebutton {
   max-width: 27em;
 }
 
-.popup-progress-label,
-.popup-progress-meter {
+#addon-progress-notification-progresstext,
+#addon-progress-notification-progressmeter {
+  /* override default label margin to match description margin */
   -moz-margin-start: 0;
   -moz-margin-end: 0;
-}
-
-.popup-progress-meter,
-#addon-install-confirmation-content {
-  margin-top: 1em;
 }
 
 .addon-install-confirmation-name {
@@ -2347,6 +2343,7 @@ toolbar[brighttext] #addonbar-closebutton {
 %endif
 %include ../shared/plugin-doorhanger.inc.css
 %include ../shared/badcontent-doorhanger.inc.css
+%include ../shared/login-doorhanger.inc.css
 
 %ifdef MOZ_DEVTOOLS
 /* Error counter */
